samples/_failures_safe/1761251931_a088b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f4cad8a.c:171:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  171 | int tokenize
      | ^~~
